--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -6,6 +6,7 @@
     height: 100px;
     background-color: #253141;
     display: flex;
+    font-weight: bold;
     align-items: center;
     padding: 0 20px;
     &__box{
