グループ新規作成

--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -38,6 +38,10 @@
   background-color: #2f3e51;
   color: white;
   padding: 20px 20px 0px;
+  a{
+    color: #ffffff;
+    text-decoration: none;
+  }
     &__box{    
     margin: 0px 0px 40px;
       &__name{
