--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -4,18 +4,27 @@
       .side_bar__header__box__name
         = current_user.name
       .side_bar__header__box__icon
-        =link_to"#", class: "side_bar__btn" do
+        =link_to new_group_path do
           =icon('far', 'edit')
         =link_to edit_user_path(current_user) do
           =icon('fas', 'cog')
   .side_bar__groups
-    .side_bar__groups__box
-      .side_bar__groups__box__name
-        グループ名
-      .side_bar__groups__box__message
-        グループメッセージ
-    .side_bar__groups__box
-      .side_bar__groups__box__name
-        グループ名
-      .side_bar__groups__box__message
-        グループメッセージ
+    -current_user.groups.each do |group|
+      .side_bar__groups__box
+        = link_to '#' do
+          .side_bar__groups__box__name
+            = group.name
+          .side_bar__groups__box__message
+            グループメッセージ
+    
+    
+    
+    
+    
+    
+    
+    -# .side_bar__groups__box
+    -#   .side_bar__groups__box__name
+    -#     グループ名
+    -#   .side_bar__groups__box__message
+    -#     グループメッセージ
