--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,11 +11,11 @@
   .side_bar__groups
     -current_user.groups.each do |group|
       .side_bar__groups__box
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .side_bar__groups__box__name
             = group.name
           .side_bar__groups__box__message
-            グループメッセージ
+            = group.show_last_message
     
     
     
