メッセージ送信の非同期化

--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -42,6 +42,7 @@
     height: calc(100vh - 100px - 90px);
     padding: 46px 40px;
     background-color: #fafafa;
+    overflow: scroll;
     &__message{
       padding-bottom: 35px;
       &__info{
